Implement Product and Advertisement Production Insertion Functionalityality in Addove Application

--- a/addove/src/main/resources/application.properties
+++ b/addove/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=addove
-spring.data.mongodb.uri=mongodb://localhost:27017/authdb
-spring.data.mongodb.auto-index-creation=true
-spring.jackson.serialization.indent-output=true
-server.port=8080
 
+# Auth DB
+mongodb.auth.uri=mongodb://localhost:27017/authdb
+
+# Product DB
+mongodb.product.uri=mongodb://localhost:27017/productProductionDetails
+
+server.port=8080
+spring.jackson.serialization.indent-output=true
+spring.data.mongodb.auto-index-creation=true
